--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -35,13 +35,13 @@
     "\n",
     "  4.1 [この章について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
     "\n",
-    "  4.1 [線形補間デモザイク](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_1.ipynb)\n",
+    "  4.2 [線形補間デモザイク](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_2.ipynb)\n",
     "\n",
-    "  4.2 欠陥画素補正\n",
+    "  4.3 [欠陥画素補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_3.ipynb)\n",
     "\n",
-    "  4.3 カラーマトリクス\n",
+    "  4.4 カラーマトリクス\n",
     "\n",
-    "  4.4 レンズシェーディング補正\n",
+    "  4.5 レンズシェーディング補正\n",
     "  \n",
     "\n",
     "5. 画質を良くする処理\n",
