Chapter 4.4 is added.

--- a/camera_raw_chapter_4_3.ipynb
+++ b/camera_raw_chapter_4_3.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## この節について\n",
     "\n",
-    "この節では、画像サイズを変えないデモザイク処理を解説します。\n",
+    "この節では、欠陥画素補正を解説します。\n",
     "\n",
     "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
     "\n",
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -471,8 +473,15 @@
    "source": [
     "## まとめ\n",
     "\n",
-    "この節では欠陥画素補正を行いました。次は[カラーマトリクス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_3.ipynb)を行います。"
+    "この節では欠陥画素補正を行いました。次は[カラーマトリクス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_4.ipynb)を行います。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
