Caption is added to each image

--- a/camera_raw_chapter_4.ipynb
+++ b/camera_raw_chapter_4.ipynb
@@ -39,21 +39,23 @@
     "\n",
     "しかし、これは多くの部分が元のRAWデータが良い状態であったという恵まれた条件によるものです。前章で扱ったRAWデータは、フルサイズセンサーのカメラで非常に明るい屋外で撮影したもので、歪みもノイズも少なく、最小限の画像処理でもそこそこの画質を再現することができました。\n",
     "\n",
-    "しかし、RAW現像やカメラ画像処理で扱う画像は常にこのような理想的な状態で撮影されるわけではありません。撮影は室内などの暗いところで扱われることも多いですし、センサーもスマートフォン向けを始め非常に小さい物を使う事が多々あります。そういった状況で撮影されたRAW画像に対しては前章で扱ったようなRAW現像だけでは太刀打ちできません。\n",
+    "しかし、RAW現像やカメラ画像処理で扱う画像は常にこのような理想的な状態で撮影されるわけではありません。撮影は室内などの暗いところで扱われることも多いですし、センサーもスマートフォン向けを始め非常に小さい物を使う事が多々あります。そういった画像データにはさまざまな理想的でない特性があり、そういったものは、各種の補正処理を行わないと最終的な画質は低品質になってしまいます。\n",
     "\n",
-    "この章ではそういった通常のRAW画像を処理する上で最も重要な処理を紹介します。\n",
+    "また、前章で扱ったデモザイクは簡易的なもので出力画像が入力画像の４分の１の大きさになるという重大な問題があります。これも解決しなくてはなりません。\n",
+    "\n",
+    "この章ではそういった通常のRAW画像を処理する上で重要な処理を紹介します。\n",
     "\n",
     "とりあげるのは以下の処理です。\n",
     "- デモザイク\n",
     "- 欠陥画素補正\n",
-    "- カラーマトリクス\n",
+    "- カラーマトリクス補正\n",
     "- レンズシェーディング補正\n",
     "\n",
     "最初に扱うデモザイクでは、出力サイズが入力サイズと同じになる通常のデモザイク処理を取り上げます。\n",
     "\n",
     "次の欠陥画素補正では、画像センサーにはつきものの欠陥画素を修正する方法を紹介します。\n",
     "\n",
-    "カラーマトリクスは色再現性を向上する処理です。\n",
+    "カラーマトリクス補正は色再現性を向上する処理です。\n",
     "\n",
     "レンズシェーディング補正は画像の周辺で明るさが低下する周辺減光・レンズシェーディングと呼ばれる現象を補正します。\n",
     "\n",
