Chapter 4.5 is added.

--- a/camera_raw_chapter_4_4.ipynb
+++ b/camera_raw_chapter_4_4.ipynb
@@ -56,7 +56,6 @@
     "import rawpy, imageio\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.pyplot import imshow\n",
     "\n",
     "# 前節までに作成したモジュールのダウンロードとインポート\n",
     "!if [ ! -f raw_process.py ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py; fi\n",
@@ -122,7 +121,7 @@
     "\n",
     "# JPEG画像表示\n",
     "plt.figure(figsize=(16, 8))\n",
-    "imshow(jpg_img)\n",
+    "plt.imshow(jpg_img)\n",
     "plt.axis('off')\n",
     "plt.title(u\"JPEG画像\")\n",
     "plt.show()"
@@ -165,7 +164,7 @@
     "\n",
     "# 画像表示。\n",
     "plt.figure(figsize=(16, 8))\n",
-    "imshow(gmm_img)\n",
+    "plt.imshow(gmm_img)\n",
     "plt.axis('off')\n",
     "plt.title(u\"RAW現像した画像\")\n",
     "plt.show()"
@@ -441,8 +440,8 @@
     "    rgb_array: numpy array\n",
     "        入力RGB画像\n",
     "    color_matrix: 2D (3x3) array like\n",
-    "        3x3 Color Correction Matrix\n",
-    "        Need to be normalized to 1.0\n",
+    "        3x3のカラーマトリクス行列\n",
+    "        1.0で正規化されていること。\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
