--- a/camera_raw_chapter_3_1.ipynb
+++ b/camera_raw_chapter_3_1.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -419,21 +419,29 @@
    "source": [
     "raw_imageはRAW画像データをnumpyの配列して渡すアトリビュートです。\n",
     "\n",
-    "このままでは１次元配列で扱いにくいので、reshapeを使って２次元配列に変換します。"
+    "縦横の大きさを取得しておきます。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "X7H2PhNb8GgE"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4024 6048\n"
+     ]
+    }
+   ],
    "source": [
-    "h, w = raw.sizes.raw_height, raw.sizes.raw_width\n",
-    "raw_array = raw_array.reshape((h, w))"
+    "h, w = raw_array.shape\n",
+    "print(h, w)"
    ]
   },
   {
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -536,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
