--- a/camera_raw_chapter_3_5.ipynb
+++ b/camera_raw_chapter_3_5.ipynb
@@ -82,8 +82,7 @@
     "raw_file  = \"sample.ARW\"\n",
     "raw = rawpy.imread(raw_file)\n",
     "raw_array = raw.raw_image\n",
-    "h, w = raw.sizes.raw_height, raw.sizes.raw_width\n",
-    "raw_array = raw_array.reshape((h, w));"
+    "h, w = raw_array.shape"
    ]
   },
   {
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,31 +310,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gamma_correction(input_img, gamma):\n",
-    "    \"\"\" \n",
+    "    \"\"\"\n",
     "    ガンマ補正処理を行う。\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    input_img: numpy array [h, w, 3]\n",
     "        入力RGB画像データ。\n",
+    "        0-1の範囲で正規化されていること。\n",
     "    gamma: float\n",
     "        ガンマ補正値。通常は2.2。\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    gamma_img: numpy array [h, 2, 3]\n",
     "        出力RGB画像。\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
     "    # デモザイク後の画像をfloatタイプとしてコピー。\n",
-    "    gamma_img = input_img.astype(float)\n",
-    "    # ガンマ関数は0-1の範囲で定義されているので、その範囲に正規化する。\n",
+    "    gamma_img = input_img.copy()\n",
     "    gamma_img[gamma_img < 0] = 0\n",
-    "    gamma_img = gamma_img/gamma_img.max()\n",
+    "    gamma_img[gamma_img > 1] = 1.0\n",
     "    # numpyのpower関数を使って、ガンマ関数を適用。\n",
     "    gamma_img = np.power(gamma_img, 1/gamma)\n",
     "    return gamma_img"
