--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -19,7 +19,7 @@
     "2. [カメラ画像処理について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_2.ipynb)\n",
     "\n",
     "\n",
-    "3. 基本的な処理\n",
+    "3. [基本的な処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1.ipynb)\n",
     "\n",
     "  3.1 [準備](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1.ipynb)\n",
     "\n",
@@ -41,13 +41,12 @@
     "\n",
     "  4.4 [カラーマトリクス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_4.ipynb)\n",
     "\n",
-    "\n",
-    "  4.5 レンズシェーディング補正\n",
+    "  4.5 [レンズシェーディング補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_5.ipynb)\n",
     "  \n",
     "\n",
-    "5. 画質を良くする処理\n",
+    "5. [画質を良くする処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_1.ipynb)\n",
     "\n",
-    "  5.1 この章について\n",
+    "  5.1 [この章について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_1.ipynb)\n",
     "\n",
     "  5.2 ノイズフィルター\n",
     "\n",
