Headers (#, ##, ###) are aligned across files.

--- a/camera_raw_chapter_2.ipynb
+++ b/camera_raw_chapter_2.ipynb
@@ -7,7 +7,7 @@
     "id": "fHOf-3ifawuQ"
    },
    "source": [
-    "# 2. カメラ画像処理について"
+    "## 2. カメラ画像処理について"
    ]
   },
   {
@@ -17,7 +17,8 @@
     "id": "GHjuq3o4Mit5"
    },
    "source": [
-    "## この章について"
+    "## カメラ画像処理について\n",
+    "### この章について"
    ]
   },
   {
@@ -41,7 +42,7 @@
     "id": "yE5YYx8Douv_"
    },
    "source": [
-    "## カメラのしくみ"
+    "### カメラのしくみ"
    ]
   },
   {
@@ -61,7 +62,7 @@
     "id": "DE1j3hTLL46c"
    },
    "source": [
-    "## RAW画像、RAWファイルとは？"
+    "### RAW画像、RAWファイルとは？"
    ]
   },
   {
@@ -133,7 +134,7 @@
     "id": "VqN6jGJoXHFF"
    },
    "source": [
-    "## カメラ画像処理のあらまし"
+    "### カメラ画像処理のあらまし"
    ]
   },
   {
@@ -229,11 +230,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## この章のまとめ\n",
+    "### この章のまとめ\n",
     "\n",
     "カメラ内部の仕組みとRAW現像処理・カメラ画像処理を、画像処理の観点から説明しました。\n",
     "\n",
-    "## 次の章\n",
+    "### 次の章\n",
     "\n",
     "次は[RAW画像の準備](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1pynb)を行います。"
    ]
