--- a/camera_raw_chapter_3_1.ipynb
+++ b/camera_raw_chapter_3_1.ipynb
@@ -7,7 +7,9 @@
     "id": "BrkVGZI7xzFL"
    },
    "source": [
-    "# 3.1 準備と簡易デモザイク"
+    "# 3 基本的な処理\n",
+    "\n",
+    "## 3.1 準備と簡易デモザイク"
    ]
   },
   {
@@ -17,7 +19,7 @@
     "id": "xamnD5Vtx0vL"
    },
    "source": [
-    "## この節について"
+    "### この節について"
    ]
   },
   {
@@ -41,7 +43,7 @@
     "id": "IlFocA-tyqYP"
    },
    "source": [
-    "## RAW画像の準備"
+    "### RAW画像の準備"
    ]
   },
   {
@@ -560,7 +562,7 @@
     "id": "jeKk14nlOeLa"
    },
    "source": [
-    "## この節のまとめ\n",
+    "### この節のまとめ\n",
     "\n",
     "必用なモジュールをインポートしてRAW画像をcolab上に読み込みました。\n",
     "次は[簡易デモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_2.ipynb)を行います。"
