--- a/camera_raw_chapter_3_2.ipynb
+++ b/camera_raw_chapter_3_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.2 簡易デモザイク処理"
+    "## 3.2 簡易デモザイク処理"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 準備"
+    "### 準備"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RAW画像の確認"
+    "### RAW画像の確認"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 疑似カラー化\n",
+    "### 疑似カラー化\n",
     "\n",
     "Bayerの画素と色の関係を直感的に理解するために、Bayerの赤の部分を赤、青を青、緑を緑で表示してみましょう。\n",
     "\n",
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 簡易デモザイク処理"
+    "### 簡易デモザイク処理"
    ]
   },
   {
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 処理の高速化"
+    "### 処理の高速化"
    ]
   },
   {
@@ -577,14 +577,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## この節のまとめ"
+    "### この節のまとめ"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RAW画像に対して簡易デモザイク処理を行いました。次は[ホワイトバランス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_2.ipynb)を行います。"
+    "RAW画像に対して簡易デモザイク処理を行いました。次は[ホワイトバランス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_3.ipynb)を行います。"
    ]
   }
  ],
