--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "  3.5 [ガンマ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_5.ipynb)\n",
     "\n",
-    "4. 重要な処理\n",
+    "4. [重要な処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
     "\n",
     "  4.1 [この章について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
     "\n",
@@ -52,9 +52,9 @@
     "\n",
     "  5.2 [ノイズフィルター](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_2.ipynb)\n",
     "\n",
-    "  5.3 エッジ強調\n",
+    "  5.3 [エッジ強調](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_3.ipynb)\n",
     "\n",
-    "  5.4 トーンカーブ補正\n",
+    "  5.4 [トーンカーブ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_4.ipynb)\n",
     "\n",
     "\n",
     "6. 応用編\n",
