--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -17,7 +17,7 @@
     "id": "VtAuZqBOCVwc"
    },
    "source": [
-    "## この本について"
+    "## 1.1 はじめに"
    ]
   },
   {
@@ -27,6 +27,8 @@
     "id": "uLDnQ8fjCbYB"
    },
    "source": [
+    "### この本について\n",
+    "\n",
     "この本では、カメラ画像処理・RAW画像現像の内容を実際の動作レベルで解説し、なるべくスクラッチからPython上で実行してみる事を目的としています。\n",
     "\n",
     "そのために、解説する処理は最重要なものにしぼり、使用するアルゴリズムは一部の例外（デモザイク）を除き、もっとも簡単なものを選びました<sup name=\"footnote1\">[1]</sup>。\n",
@@ -55,7 +57,7 @@
     "id": "bPQ_7Q6Qjwsb"
    },
    "source": [
-    "## 対象読者"
+    "### 対象読者"
    ]
   },
   {
@@ -80,7 +82,7 @@
     "id": "vZDxW244EBjH"
    },
    "source": [
-    "## Colabについて\n"
+    "### Colabについて\n"
    ]
   },
   {
@@ -104,7 +106,7 @@
     "id": "oDzKvsuXEFiv"
    },
    "source": [
-    "## この本で扱うもの\n"
+    "### この本で扱うもの\n"
    ]
   },
   {
@@ -130,7 +132,7 @@
     "id": "GxTPnXflEN2u"
    },
    "source": [
-    "## この記事で扱わないもの\n"
+    "### この記事で扱わないもの\n"
    ]
   },
   {
@@ -155,7 +157,7 @@
     "id": "rHby_HVMEQ5x"
    },
    "source": [
-    "## 環境について\n",
+    "### 環境について\n",
     "\n",
     "この記事で解説する内容は一般的なものですが、使用した画像ファイルは特定のカメラに依存しています。\n",
     "他のカメラでもわずかな変更で同等の処理ができるとは予想されますが、検証はしていません。"
@@ -168,7 +170,7 @@
     "id": "FR2x7uaIEY_I"
    },
    "source": [
-    "### 使用カメラ\n",
+    "#### 使用カメラ\n",
     "\n"
    ]
   },
@@ -193,7 +195,7 @@
     "id": "8_NEJxPyEadj"
    },
    "source": [
-    "### 実行環境\n",
+    "#### 実行環境\n",
     "\n",
     "この内容を再現するには通常のPC環境に加えて以下の環境等が必用です。\n",
     "\n",
@@ -213,9 +215,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 次の章\n",
+    "### 次の章\n",
     "\n",
-    "次は[カメラ画像処理について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1pynb)簡単に解説します。"
+    "次は[カメラ画像処理について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_2.pynb)簡単に解説します。"
    ]
   }
  ],
