--- a/camera_raw_chapter_6_1.ipynb
+++ b/camera_raw_chapter_6_1.ipynb
@@ -44,76 +44,39 @@
    "source": [
     "### 準備\n",
     "\n",
-    "まずライブラリーのインストールと、モジュールのインポート、画像の読み込みを行います。今回もラズベリーパイで撮影したチャート画像を使用します。\n",
-    "内容については各節を参照ください。"
+    "まずモジュールのインポートと日本語の設定を行っておきます。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rawpy in /home/moiz/anaconda3/lib/python3.7/site-packages (0.13.0)\n",
-      "Requirement already satisfied: numpy in /home/moiz/anaconda3/lib/python3.7/site-packages (from rawpy) (1.15.1)\n",
-      "\u001b[33mYou are using pip version 19.0.1, however version 19.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n",
-      "\u001b[33mYou are using pip version 19.0.1, however version 19.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "E: Could not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\n",
-      "E: Unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\n"
+      "E: Could not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\r\n",
+      "E: Unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\r\n"
      ]
     }
    ],
    "source": [
-    "# rawpyとimageioのインストール\n",
-    "!pip install rawpy;\n",
-    "!pip install imageio;\n",
-    "\n",
-    "# rawpy, imageio, numpuy, pyplot, imshowのインポート\n",
-    "import rawpy, imageio\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.pyplot import imshow\n",
-    "\n",
-    "# 前節までに作成したモジュールのダウンロードとインポート\n",
-    "!if [ ! -f raw_process.py ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py; fi\n",
-    "from raw_process import simple_demosaic, white_balance, black_level_correction, gamma_correction\n",
-    "from raw_process import demosaic, defect_correction, color_correction_matrix, lens_shading_correction\n",
-    "from raw_process import noise_filter, apply_matrix, edge_enhancement, tone_curve_correction\n",
     "\n",
     "# 日本語フォントの設定\n",
     "!apt -y install fonts-ipafont-gothic\n",
     "plt.rcParams['font.family'] = 'IPAPGothic'\n",
     "# もし日本語が文字化けしている場合`! rm /content/.cache/matplotlib/fontList.json`を実行して、\n",
-    "# Runtime->Restart Runtimeで再実行\n",
-    "\n",
-    "# 画像をダウンロードします。\n",
-    "!if [ ! -f chart.jpg ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/chart.jpg; fi\n",
-    "\n",
-    "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
-    "# from google.colab import files\n",
-    "# uploaded = files.upload()\n",
-    "\n",
-    "# RAWファイルの名前。\n",
-    "# アップロードしたファイルを使う場合はその名前に変更。\n",
-    "raw_file  = \"chart.jpg\"\n",
-    "raw = rawpy.imread(raw_file)\n",
-    "raw_array = raw.raw_image\n",
-    "h, w = raw_array.shape"
+    "# Runtime->Restart Runtimeで再実行"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 線形補間デモザイク処理の分析\n",
+    "### ベイヤー画像の周波数特性\n",
     "\n",
     "_この節は、画像処理の理論的背景に興味がない方は読み飛ばして構いません。_\n",
     "\n",
@@ -235,16 +198,23 @@
     "\n",
     "青い部分が、全式の後半部分にできたもので元の画像の一部を定間隔でとりだした（サブサンプリング）したためにできた副生成物（アーティファクト）です。このような副生成物をエイリアシングとよびます[^1]。\n",
     "\n",
-    "[^1]: 通常の画像で拡大縮小などによってエイリアシングがおきると、高周波成分が低い周波数に干渉してモアレなどを生成することがしられています。\n",
-    "\n",
-    "画像の周波数成分は低い部分に多いと考えると、サンプリング前の信号を取り出すには、低周波部分を取り出してやれば良いことになります。\n",
-    "信号処理的にはローパスフィルターをかけます。"
+    "[^1]: 通常の画像で拡大縮小などによってエイリアシングがおきると、高周波成分が低い周波数に干渉してモアレなどを生成することがしられています。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 線形補間フィルターの周波数特性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "画像の周波数成分は低い部分に多いと考えると、サンプリング前の信号を取り出すには、低周波部分を取り出してやれば良いことになります。\n",
+    "信号処理的にはローパスフィルターをかけます。\n",
+    "\n",
     "ここで、線形補間の式から作ったフィルターを思い出すと、このような形をしていました。\n",
     "\n",
     "$$\n",
@@ -256,13 +226,13 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "これはそのものズバリ、ローパスフィルターです。周波数特性はこんな感じになります。\n",
+    "これはそのものズバリ、ローパスフィルターです。\n",
     "\n",
     "この周波数特性はこのようになります。\n",
     "$$\n",
     "\\begin{eqnarray}\n",
     "H_1\\left(w, v\\right) \n",
-    "&=& \\sum_{x=-1}^{1} \\sum_{y=-1}^{1} h_1 \\left(x, y\\right) e^{\\pi \\left(w x + v y \\right)} \\\\\n",
+    "&=& \\sum_{n=-1}^{1} \\sum_{m=-1}^{1} h_1 \\left(n, m\\right) e^{-i w n} e^{-i v m}\\\\\n",
     "&=& \\frac{1}{2} cos\\left( w \\right) + \\frac{1}{2} cos\\left( v \\right) + 1\n",
     "\\end{eqnarray}\n",
     "$$\n",
@@ -272,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -289,13 +259,10 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# 横軸と縦軸の位置\n",
     "sample_num = 64\n",
-    "ws = np.linspace(-math.pi, math.pi, sample_num)\n",
-    "vs = np.linspace(-math.pi, math.pi, sample_num)\n",
+    "ws = np.linspace(-np.pi, np.pi, sample_num)\n",
+    "vs = np.linspace(-np.pi, np.pi, sample_num)\n",
     "\n",
     "# wsとvsを並べたもの。\n",
     "wmesh, vmesh = np.meshgrid(ws, vs, sparse=True)\n",
@@ -325,18 +292,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "同様に、赤画素のサンプリング関数は、\n",
+    "### 赤・青画素の周波数特性とフィルター\n",
+    "\n",
+    "同様に赤画素のサンプリング関数は、xとyがどちらも偶数のときのみ値が存在することを考えると、\n",
     "\n",
     "\\begin{equation}\n",
-    "s_R \\left ( x, y \\right ) =  \\frac{1}{4} \\left ( 1 + \\left ( -1 \\right ) ^ x \\right ) \\left ( 1 + \\left ( -1 \\right ) ^ y \\right ) \n",
-    "=  \\frac{1}{4} \\left ( 1 + e ^ {i \\pi x} \\right ) \\left ( 1 + e ^ {i \\pi y} \\right )  \n",
+    "s_R \\left ( x, y \\right ) =  \\frac{1}{4} \\left ( 1 - \\left ( -1 \\right ) ^ x \\right ) \\left ( 1 - \\left ( -1 \\right ) ^ y \\right ) \n",
+    "=  \\frac{1}{4} \\left ( 1 - e ^ {i \\pi x} \\right ) \\left ( 1 - e ^ {i \\pi y} \\right )  \n",
     "\\end{equation}\n",
     "\n",
     "で、青画素は、\n",
     "\n",
     "\\begin{equation}\n",
-    "s_B \\left ( x, y \\right ) =  \\frac{1}{4} \\left ( 1 - \\left ( -1 \\right ) ^ x \\right ) \\left ( 1 - \\left ( -1 \\right ) ^ y \\right ) \n",
-    "=  \\frac{1}{4} \\left ( 1 - e ^ {i \\pi x} \\right ) \\left ( 1 - e ^ {i \\pi y} \\right )  \n",
+    "s_B \\left ( x, y \\right ) =  \\frac{1}{4} \\left ( 1 + \\left ( -1 \\right ) ^ x \\right ) \\left ( 1 + \\left ( -1 \\right ) ^ y \\right ) \n",
+    "=  \\frac{1}{4} \\left ( 1 + e ^ {i \\pi x} \\right ) \\left ( 1 + e ^ {i \\pi y} \\right )  \n",
     "\\end{equation}\n",
     "\n",
     "符号を無視すると周波数特性はどちらも同じになり、エイリアシングの様子はこうなります。\n",
@@ -367,7 +336,7 @@
     "$$\n",
     "\\begin{eqnarray}\n",
     "H_2\\left(w, v\\right) \n",
-    "&=& \\sum_{x=-1}^{1} \\sum_{y=-1}^{1} h_2 \\left(x, y\\right) e^{\\pi \\left(w x + v y \\right)} \\\\\n",
+    "&=& \\sum_{n=-1}^{1} \\sum_{m=-1}^{1} h_2 \\left(n, m\\right) e^{-i w n} e^{-i v m} \\\\\n",
     "&=& \\left( 1 + cos\\left( w \\right) \\right) \\left( 1 + cos\\left( v \\right) \\right)\n",
     "\\end{eqnarray}\n",
     "$$\n",
@@ -377,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +382,7 @@
    "source": [
     "ちょうと赤青画像のエイリアシングを取り除くような特性になっています。\n",
     "\n",
-    "こうしてみると理想的なフィルター処理をしているように見えますが、実際の画像はだいぶぼやけていて、偽色という本来ないはずの色がでてきています。\n",
+    "こうしてみると理想的なフィルター処理をしているように見えますが、実際の画像はだいぶぼやけていて、細かい模様の周りには偽色という本来ないはずの色がでてきています。\n",
     "\n",
     "画像のぼやけは、もともとの画像の周波数特性を十分にカバーしていないことを、偽色の存在は本来の信号とエイリアシングとが十分に分割できていない事を示しています。\n",
     "このような単純な形のフィルターの限界でしょう。"
