--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -33,6 +33,7 @@
     "\n",
     "  3.5 [ガンマ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_5.ipynb)\n",
     "\n",
+    "\n",
     "4. [重要な処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
     "\n",
     "  4.1 [この章について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
@@ -57,11 +58,11 @@
     "  5.4 [トーンカーブ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_4.ipynb)\n",
     "\n",
     "\n",
-    "6. 応用編\n",
+    "6. [応用編](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb)\n",
     "\n",
-    "  6.1 線形補間デモザイクの周波数特性\n",
+    "  6.1 [線形補間デモザイクの周波数特性](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb)\n",
     "\n",
-    "  6.2 高度なデモザイク処理\n",
+    "  6.2 [高度なデモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_2.ipynb)\n",
     "\n",
     "\n",
     "7. まとめ\n",
