--- a/camera_raw_chapter_3_5.ipynb
+++ b/camera_raw_chapter_3_5.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -43,7 +43,12 @@
      "text": [
       "Requirement already satisfied: rawpy in /home/moiz/anaconda3/lib/python3.7/site-packages (0.13.0)\n",
       "Requirement already satisfied: numpy in /home/moiz/anaconda3/lib/python3.7/site-packages (from rawpy) (1.15.1)\n",
+      "\u001b[33mYou are using pip version 19.0.1, however version 19.0.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already satisfied: imageio in /home/moiz/anaconda3/lib/python3.7/site-packages (2.4.1)\n",
+      "\u001b[33mYou are using pip version 19.0.1, however version 19.0.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "rm: cannot remove '/root/.cache/matplotlib/fontList.json': Permission denied\n",
       "E: Could not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\n",
       "E: Unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\n"
      ]
@@ -60,18 +65,18 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# 前節までに作成したモジュールのダウンロード\n",
-    "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/raw_process.py; fi\n",
+    "!if [ ! -f raw_process.py ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py; fi\n",
     "\n",
     "from raw_process import simple_demosaic, white_balance, black_level_correction\n",
     "\n",
     "# 日本語フォントの設定\n",
-    "!apt -y install fonts-ipafont-gothic\n",
+    "!rm /root/.cache/matplotlib/fontList.json\n",
+    "!apt-get -y install fonts-ipafont-gothic\n",
     "plt.rcParams['font.family'] = 'IPAPGothic'\n",
-    "# もし日本語が文字化けしている場合`! rm /content/.cache/matplotlib/fontList.json`を実行して、\n",
-    "# Runtime->Restart Runtimeで再実行\n",
+    "# もし日本語が文字化けしている場合Runtime->Restart Runtimeで再実行\n",
     "\n",
     "# 画像をダウンロードします。\n",
-    "!if [ ! -f sample.ARW ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/sample.ARW; fi\n",
+    "!if [ ! -f sample.ARW ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/sample.ARW; fi\n",
     "\n",
     "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
     "# from google.colab import files\n",
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
