--- a/camera_raw_chapter_2.ipynb
+++ b/camera_raw_chapter_2.ipynb
@@ -1,271 +1,271 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "fHOf-3ifawuQ"
-   },
-   "source": [
-    "## 2. カメラ画像処理について"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "camera_raw_chapter_2.ipynb",
+      "version": "0.3.2",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "GHjuq3o4Mit5"
-   },
-   "source": [
-    "## カメラ画像処理について\n",
-    "### この章について"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "fAAldEyCbA4x"
-   },
-   "source": [
-    "この章ではカメラのしくみやRAW画像からはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。\n",
-    "\n",
-    "この章を含む全ての内容はColabノートブックとして公開してあります。この章のノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-    "\n",
-    "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_2.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "yE5YYx8Douv_"
-   },
-   "source": [
-    "### カメラのしくみ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "myKIrTiSou4-"
-   },
-   "source": [
-    "(TODO: 追加)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "DE1j3hTLL46c"
-   },
-   "source": [
-    "### RAW画像、RAWファイルとは？"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "mgClTMIQMv9g"
-   },
-   "source": [
-    "RAWファイルやRAWデータというのは厳密な定義はないのですが、カメラ処理でRAWというとBayerフォーマットの画像データを指すことが多いようです。したがって多くの場合、RAWデータはBayerフォーマットの画像データ、RAWファイルはそのRAWデータを含んだファイルということになります。\n",
-    "\n",
-    "まず前提として、今使われているカメラの画像センサーの殆どはBayer配列というものを使ってフルカラーを実現しています。\n",
-    "\n",
-    "画像センサーは、碁盤の目状にならんだ小さな光センサーの集まりでできています。一つ一つの光センサーはそのままでは色の違いを認識できません。そこで色を認識するためには、3原色のうち一色を選択して光センサーにあてて、その光の強度を測定する必要があります。 方法としてはまず、分光器を使って光を赤、青、緑に分解して、３つの画像センサーにあてて、それぞれの色の画像を認識し、その後その３枚をあわせることでフルカラーの画像を合成するという方法がありました。これは３板方式などとよばれることがあります。この方法は手法的にもわかりやすく、また、余計な処理が含まれないためフルカラーの画像がきれい、といった特徴があり高級ビデオカメラなどで採用されていました。欠点としては分光器と３つの画像センサーを搭載するためにサイズが大きくなるという点があります。\n",
-    "\n",
-    "これに対して、画像センサー上の一つ一つの光センサーの上に、一部の波長の光だけを通す色フィルターを載せ、各画素が異なる色を取り込むという方法もあります。この方法では１枚の画像センサーでフルカラー画像を取り込めるため、３板方式に対して単板方式とよばれることもあります。３版方式とくらべた利点としては分光器が不要で１枚のセンサーで済むのでサイズが小さい。逆に欠点としては、１画素につき１色の情報しか無いので、フルカラーの画像を再現するには画像処理が必要になる、という点があります。\n",
-    "\n",
-    "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター[^1]というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
-    "\n",
-    "[^1]: 実際にはこの他に緑色の画素もあり、2x2の４画素のパターンになっているのが普通\n",
-    "\n",
-    "こういうわけでBayer配列の画像センサーの出力では１画素につき一色しか情報をもちません。Bayer配列のカラーフィルターはこの図左のように、2x2ブロックの中に、赤が1画素、青が1画素、緑が2画素ならぶようになっています。緑は対角線上にならびます。緑が2画素あるのは、可視光の中でも最も強い光の緑色を使うことで解像度を稼ぐため、という解釈がなされています。Bayerというのはこの配列の発明者の名前です。\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "YhiKOBM5Pv49"
-   },
-   "source": [
-    "![BayerとRGB配列](https://github.com/moizumi99/camera_raw_processing/raw/master/fig1.png \"BayerとRGB配列\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "mI9vlDdyQgju"
-   },
-   "source": [
-    "カメラ用センサーでは2000年代初頭までは、補色フィルターや３板方式もそれなりの割合で使われていたのですが、センサーの性能向上やカメラの小型化と高画質化の流れの中でほとんどがBayer方式にかわりました。今では、SigmaのFoveonのような意欲的な例外を除くと、DSLRやスマートフォンで使われているカラー画像センサーの殆どがBayer方式を採用しています。したがって、ほとんどのカメラの中ではBayerフォーマットの画像データをセンサーから受取り、フルカラーの画像に変換するという処理が行われている、ということになります。\n",
-    "\n",
-    "こういったBayerフォーマットの画像ファイルは、すなわちセンサーの出力に近いところで出力されたことになり、カメラが処理したJPEGに比べて以下のような利点があります。\n",
-    "\n",
-    "* ビット数が多い（RGBは通常８ビット。Bayerは10ビットから12ビットが普通。さらに多いものもある）\n",
-    "* 信号が線形（ガンマ補正などがされていない）\n",
-    "* 余計な画像処理がされていない\n",
-    "* 非可逆圧縮がかけられていない（情報のロスがない）\n",
-    "\n",
-    "したがって、優秀なソフトウェアを使うことで、カメラが出力するJPEGよりもすぐれた画像を手に入れる事ができる「可能性」があります。\n",
-    "\n",
-    "逆に欠点としては\n",
-    "\n",
-    "* データ量が多い（ビット数が多い。通常非可逆圧縮がされていない）\n",
-    "* 手を加えないと画像が見れない\n",
-    "* 画像フォーマットの情報があまりシェアされていない\n",
-    "* 実際にはどんな処理がすでに行われているのか不透明\n",
-    "\n",
-    "などがあります。最後の点に関して言うと、RAWデータといってもセンサー出力をそのままファイルに書き出すことはまずなく、欠陥画素除去など最低限の前処理が行われいるのが普通です。\n",
-    "しかし、実際にどんな前処理がおこなわれているのかは必ずしも公開されていません。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "VqN6jGJoXHFF"
-   },
-   "source": [
-    "### カメラ画像処理のあらまし"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Z4X5MI9tXWGN"
-   },
-   "source": [
-    "Bayerからフルカラーの画像を作り出すRAW現像処理・カメラ画像処理のうち、メインになる部分の例はこんな感じになります。[^2]\n",
-    "\n",
-    "[^2]: これはあくまで一例です。実際のカメラやRAW現像ソフト内で行われる処理はメーカーや機種ごとに異なります。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "FWNOX2oaXagW"
-   },
-   "source": [
-    "![カメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/fig2.png \"カメラ画像処理パイプライン\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "iuagwvuBYBMc"
-   },
-   "source": [
-    "このうち、最低限必要な処理は、以下のものです。\n",
-    "\n",
-    "* ブラックレベル補正\n",
-    "* ホワイトバランス補正（デジタルゲイン補正も含む）\n",
-    "* デモザイク（Bayerからフルカラー画像への変換）\n",
-    "* ガンマ補正\n",
-    "\n",
-    "これらがないと、まともに見ることのできる画像を作ることができません。\n",
-    "\n",
-    "さらに、最低限の画質を維持するには、通常は、\n",
-    "\n",
-    "* 線形性補正\n",
-    "* 欠陥画素補正\n",
-    "* 周辺減光補正\n",
-    "* カラーマトリクス\n",
-    "\n",
-    "が必要です。ただし、線形性補正や欠陥画素補正は、カメラがRAWデータを出力する前に処理されていることが多いようです。また、センサーの特性がよければ線形性補正やカラーマトリクスの影響は小さいかもしれません。\n",
-    "\n",
-    "次に、より良い画質を実現するものとして、\n",
-    "\n",
-    "* ノイズ除去\n",
-    "* エッジ強調・テクスチャ補正\n",
-    "\n",
-    "があります。RGB->YUV変換はJPEGやMPEGの画像を作るのには必要ですが、RGB画像を出力する分にはなくてもかまいません。\n",
-    "\n",
-    "この他に、最近のカメラでは更に画質を向上させるために\n",
-    "\n",
-    "* レンズ収差補正\n",
-    "* レンズ歪補正\n",
-    "* 偽色補正\n",
-    "* グローバル・トーン補正\n",
-    "* ローカル・トーン補正\n",
-    "* 高度なノイズ処理\n",
-    "* 高度な色補正\n",
-    "* ズーム\n",
-    "* マルチフレーム処理\n",
-    "\n",
-    "などの処理が行われるのが普通です。今回はベーシックな処理のみとりあげるので、こういった高度な処理は行いません。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "yGYayQIAYJn8"
-   },
-   "source": [
-    "結局、今回扱うのは次の部分のみです。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Tps7a76cYNLN"
-   },
-   "source": [
-    "![単純化したカメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/fig3.png \"単純化したカメラ画像処理パイプライン\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### この章のまとめ\n",
-    "\n",
-    "カメラ内部の仕組みとRAW現像処理・カメラ画像処理を、画像処理の観点から説明しました。\n",
-    "\n",
-    "### 次の章\n",
-    "\n",
-    "次は[RAW画像の準備](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1pynb)を行います。"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "collapsed_sections": [],
-   "include_colab_link": true,
-   "name": "camera_raw_chapter_2.ipynb",
-   "provenance": [],
-   "version": "0.3.2"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "cells": [
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "fHOf-3ifawuQ"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 2. カメラ画像処理について"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "GHjuq3o4Mit5"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## カメラ画像処理について\n",
+        "### この章について"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "fAAldEyCbA4x"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "この章ではカメラのしくみやRAW画像からはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。\n",
+        "\n",
+        "この章を含む全ての内容はColabノートブックとして公開してあります。この章のノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "\n",
+        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_2.ipynb"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "yE5YYx8Douv_"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### カメラのしくみ"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "myKIrTiSou4-"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "(TODO: 追加)"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "DE1j3hTLL46c"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### RAW画像、RAWファイルとは？"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "mgClTMIQMv9g"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "RAWファイルやRAWデータというのは厳密な定義はないのですが、カメラ処理でRAWというとBayerフォーマットの画像データを指すことが多いようです。したがって多くの場合、RAWデータはBayerフォーマットの画像データ、RAWファイルはそのRAWデータを含んだファイルということになります。\n",
+        "\n",
+        "まず前提として、今使われているカメラの画像センサーの殆どはBayer配列というものを使ってフルカラーを実現しています。\n",
+        "\n",
+        "画像センサーは、碁盤の目状にならんだ小さな光センサーの集まりでできています。一つ一つの光センサーはそのままでは色の違いを認識できません。そこで色を認識するためには、3原色のうち一色を選択して光センサーにあてて、その光の強度を測定する必要があります。 方法としてはまず、分光器を使って光を赤、青、緑に分解して、３つの画像センサーにあてて、それぞれの色の画像を認識し、その後その３枚をあわせることでフルカラーの画像を合成するという方法がありました。これは３板方式などとよばれることがあります。この方法は手法的にもわかりやすく、また、余計な処理が含まれないためフルカラーの画像がきれい、といった特徴があり高級ビデオカメラなどで採用されていました。欠点としては分光器と３つの画像センサーを搭載するためにサイズが大きくなるという点があります。\n",
+        "\n",
+        "これに対して、画像センサー上の一つ一つの光センサーの上に、一部の波長の光だけを通す色フィルターを載せ、各画素が異なる色を取り込むという方法もあります。この方法では１枚の画像センサーでフルカラー画像を取り込めるため、３板方式に対して単板方式とよばれることもあります。３版方式とくらべた利点としては分光器が不要で１枚のセンサーで済むのでサイズが小さい。逆に欠点としては、１画素につき１色の情報しか無いので、フルカラーの画像を再現するには画像処理が必要になる、という点があります。\n",
+        "\n",
+        "単版方式の画像センサーの上に載る色フィルターの種類としては、３原色を通す原色フィルターと、３原色の補色（シアン・マゼンダ・イエロー）を通す補色フィルター[^1]というものがあります。補色フィルターは光の透過率が高いためより明るい画像を得ることができます。それに対して原色フィルターは色の再現度にすぐれています。Bayer配列はこの単版原色フィルター方式のうち最もポピュラーなものです。\n",
+        "\n",
+        "[^1]: 実際にはこの他に緑色の画素もあり、2x2の４画素のパターンになっているのが普通\n",
+        "\n",
+        "こういうわけでBayer配列の画像センサーの出力では１画素につき一色しか情報をもちません。Bayer配列のカラーフィルターはこの図左のように、2x2ブロックの中に、赤が1画素、青が1画素、緑が2画素ならぶようになっています。緑は対角線上にならびます。緑が2画素あるのは、可視光の中でも最も強い光の緑色を使うことで解像度を稼ぐため、という解釈がなされています。Bayerというのはこの配列の発明者の名前です。\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "YhiKOBM5Pv49"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "![BayerとRGB配列](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig1.png \"BayerとRGB配列\")"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "mI9vlDdyQgju"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "カメラ用センサーでは2000年代初頭までは、補色フィルターや３板方式もそれなりの割合で使われていたのですが、センサーの性能向上やカメラの小型化と高画質化の流れの中でほとんどがBayer方式にかわりました。今では、SigmaのFoveonのような意欲的な例外を除くと、DSLRやスマートフォンで使われているカラー画像センサーの殆どがBayer方式を採用しています。したがって、ほとんどのカメラの中ではBayerフォーマットの画像データをセンサーから受取り、フルカラーの画像に変換するという処理が行われている、ということになります。\n",
+        "\n",
+        "こういったBayerフォーマットの画像ファイルは、すなわちセンサーの出力に近いところで出力されたことになり、カメラが処理したJPEGに比べて以下のような利点があります。\n",
+        "\n",
+        "* ビット数が多い（RGBは通常８ビット。Bayerは10ビットから12ビットが普通。さらに多いものもある）\n",
+        "* 信号が線形（ガンマ補正などがされていない）\n",
+        "* 余計な画像処理がされていない\n",
+        "* 非可逆圧縮がかけられていない（情報のロスがない）\n",
+        "\n",
+        "したがって、優秀なソフトウェアを使うことで、カメラが出力するJPEGよりもすぐれた画像を手に入れる事ができる「可能性」があります。\n",
+        "\n",
+        "逆に欠点としては\n",
+        "\n",
+        "* データ量が多い（ビット数が多い。通常非可逆圧縮がされていない）\n",
+        "* 手を加えないと画像が見れない\n",
+        "* 画像フォーマットの情報があまりシェアされていない\n",
+        "* 実際にはどんな処理がすでに行われているのか不透明\n",
+        "\n",
+        "などがあります。最後の点に関して言うと、RAWデータといってもセンサー出力をそのままファイルに書き出すことはまずなく、欠陥画素除去など最低限の前処理が行われいるのが普通です。\n",
+        "しかし、実際にどんな前処理がおこなわれているのかは必ずしも公開されていません。"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "VqN6jGJoXHFF"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### カメラ画像処理のあらまし"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "Z4X5MI9tXWGN"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Bayerからフルカラーの画像を作り出すRAW現像処理・カメラ画像処理のうち、メインになる部分の例はこんな感じになります。[^2]\n",
+        "\n",
+        "[^2]: これはあくまで一例です。実際のカメラやRAW現像ソフト内で行われる処理はメーカーや機種ごとに異なります。"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "FWNOX2oaXagW"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "![カメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig2.png \"カメラ画像処理パイプライン\")"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "iuagwvuBYBMc"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "このうち、最低限必要な処理は、以下のものです。\n",
+        "\n",
+        "* ブラックレベル補正\n",
+        "* ホワイトバランス補正（デジタルゲイン補正も含む）\n",
+        "* デモザイク（Bayerからフルカラー画像への変換）\n",
+        "* ガンマ補正\n",
+        "\n",
+        "これらがないと、まともに見ることのできる画像を作ることができません。\n",
+        "\n",
+        "さらに、最低限の画質を維持するには、通常は、\n",
+        "\n",
+        "* 線形性補正\n",
+        "* 欠陥画素補正\n",
+        "* 周辺減光補正\n",
+        "* カラーマトリクス\n",
+        "\n",
+        "が必要です。ただし、線形性補正や欠陥画素補正は、カメラがRAWデータを出力する前に処理されていることが多いようです。また、センサーの特性がよければ線形性補正やカラーマトリクスの影響は小さいかもしれません。\n",
+        "\n",
+        "次に、より良い画質を実現するものとして、\n",
+        "\n",
+        "* ノイズ除去\n",
+        "* エッジ強調・テクスチャ補正\n",
+        "\n",
+        "があります。RGB->YUV変換はJPEGやMPEGの画像を作るのには必要ですが、RGB画像を出力する分にはなくてもかまいません。\n",
+        "\n",
+        "この他に、最近のカメラでは更に画質を向上させるために\n",
+        "\n",
+        "* レンズ収差補正\n",
+        "* レンズ歪補正\n",
+        "* 偽色補正\n",
+        "* グローバル・トーン補正\n",
+        "* ローカル・トーン補正\n",
+        "* 高度なノイズ処理\n",
+        "* 高度な色補正\n",
+        "* ズーム\n",
+        "* マルチフレーム処理\n",
+        "\n",
+        "などの処理が行われるのが普通です。今回はベーシックな処理のみとりあげるので、こういった高度な処理は行いません。"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "yGYayQIAYJn8"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "今回、まず最初の**基本的な処理**では次の部分の処理を行います。"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "Tps7a76cYNLN"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "![単純化したカメラ画像処理パイプライン](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig3.png \"単純化したカメラ画像処理パイプライン\")\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Z7z_H8hjEHrQ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "次の章以降で残りの処理を行います。"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "kjpVJ5drDfXK",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### この章のまとめ\n",
+        "\n",
+        "カメラ内部の仕組みとRAW現像処理・カメラ画像処理を、画像処理の観点から説明しました。\n",
+        "\n",
+        "### 次の章\n",
+        "\n",
+        "次は[RAW画像の準備](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_1.ipynb)を行います。"
+      ]
+    }
+  ]
 }
