--- a/camera_raw_chapter_3_2.ipynb
+++ b/camera_raw_chapter_3_2.ipynb
@@ -73,11 +73,7 @@
       "metadata": {
         "id": "d_vvrfidGF5T",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 210
-        },
-        "outputId": "24d6690a-7c8b-43b7-83f3-d26d1cc58ac0"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -109,26 +105,8 @@
         "raw_array = raw.raw_image\n",
         "h, w = raw_array.shape"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: rawpy in /usr/local/lib/python3.6/dist-packages (0.13.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from rawpy) (1.14.6)\n",
-            "Requirement already satisfied: imageio in /usr/local/lib/python3.6/dist-packages (2.4.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from imageio) (1.14.6)\n",
-            "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (from imageio) (4.0.0)\n",
-            "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow->imageio) (0.46)\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "fonts-ipafont-gothic is already the newest version (00303-18ubuntu1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 8 not upgraded.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -154,11 +132,11 @@
       "metadata": {
         "id": "XhDZaFyfGF5Y",
         "colab_type": "code",
+        "outputId": "05f2de41-7793-49e6-81ac-d6e6c604d365",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
-        },
-        "outputId": "05f2de41-7793-49e6-81ac-d6e6c604d365"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -168,7 +146,7 @@
         "plt.title(u\"RAW画像の確認\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -232,11 +210,11 @@
       "metadata": {
         "id": "pvoxAr0VGF5c",
         "colab_type": "code",
+        "outputId": "d2d41a45-433d-418c-8894-3c075bd571ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        },
-        "outputId": "d2d41a45-433d-418c-8894-3c075bd571ae"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -250,7 +228,7 @@
         "plt.title(u\"RAW画像の拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -294,17 +272,17 @@
       "metadata": {
         "id": "m-whdJmqGF5f",
         "colab_type": "code",
+        "outputId": "c2417039-c07a-4fa2-8499-9a9cd582b6cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "c2417039-c07a-4fa2-8499-9a9cd582b6cd"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(raw.raw_pattern)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,11 +376,11 @@
       "metadata": {
         "id": "sJ2pxDORGF5k",
         "colab_type": "code",
+        "outputId": "a0855ee9-00e0-45f3-8369-146cedf5a3dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        },
-        "outputId": "a0855ee9-00e0-45f3-8369-146cedf5a3dd"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -413,7 +391,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたもの\")\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -443,11 +421,11 @@
       "metadata": {
         "id": "_koAaJm-GF5o",
         "colab_type": "code",
+        "outputId": "f1b4001d-b653-4e76-d2c7-9814b97351e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        },
-        "outputId": "f1b4001d-b653-4e76-d2c7-9814b97351e7"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -458,7 +436,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたものを拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -523,11 +501,11 @@
       "metadata": {
         "id": "iA2iapnxGF5s",
         "colab_type": "code",
+        "outputId": "f93cd86d-9ba4-4790-dcf0-007cd5246c4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "f93cd86d-9ba4-4790-dcf0-007cd5246c4f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -537,7 +515,7 @@
         "# 表示して確認\n",
         "print(bayer_pattern)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,11 +579,11 @@
       "metadata": {
         "id": "_j8cnxo9GF5z",
         "colab_type": "code",
+        "outputId": "e80fee0b-019f-4928-ed9e-4dc18d5df703",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        },
-        "outputId": "e80fee0b-019f-4928-ed9e-4dc18d5df703"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -619,7 +597,7 @@
         "plt.title(u\"簡易デモザイク\")\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -723,11 +701,11 @@
       "metadata": {
         "id": "9S5sTzavGF5_",
         "colab_type": "code",
+        "outputId": "680cb368-69c8-4719-82b8-3baa0b3b1409",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        },
-        "outputId": "680cb368-69c8-4719-82b8-3baa0b3b1409"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -743,7 +721,7 @@
         "plt.title(u\"simple_demosaic関数の出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -768,10 +746,10 @@
       "source": [
         "同様の画像が出力されたようです。\n",
         "\n",
-        "この`simple_demosaic()`関数を含んだモジュールが`raw_process.py`として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
+        "この`simple_demosaic()`関数を含んだモジュールが`raw_process.py`として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py)されています。\n",
         "使用する場合は、\n",
         "\n",
-        "`!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py`\n",
+        "`!wget https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py`\n",
         "\n",
         "としてダウンロードした後、\n",
         "\n",
